--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan, Jesse"
+TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan, Jesse Suderman"
