set up database: added function to interact with database

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan"
+URI = "mongodb+srv://peppermint-dev:cRs9UDzcFSdDqp3t@hws-messenger.mcy8y.mongodb.net/peppermint-db?retryWrites=true&w=majority"
