--- a/server/package.json
+++ b/server/package.json
@@ -3,25 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon ./bin/www",
     "dev": "nodemon ./bin/www",
     "debug": "nodemon  --inspect ./bin/www",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.28",
-    "@hapi/joi": "^17.1.1",
-    "bcryptjs": "^2.4.3"
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
