--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan, Jesse Suderman"
 URI = "mongodb+srv://peppermint-dev:cRs9UDzcFSdDqp3t@hws-messenger.mcy8y.mongodb.net/peppermint-db?retryWrites=true&w=majority"
+SG_API="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"
