fixed merger errors

--- a/server/.env
+++ b/server/.env
@@ -1,15 +1,6 @@
 TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan, Jesse Suderman"
-<<<<<<< HEAD
-
-DB_CONNECT = mongodb+srv://peppermint-dev:cRs9UDzcFSdDqp3t@hws-messenger.mcy8y.mongodb.net/peppermint-db?retryWrites=true&w=majority
-
-
-
+URI = "mongodb+srv://peppermint-dev:cRs9UDzcFSdDqp3t@hws-messenger.mcy8y.mongodb.net/peppermint-db?retryWrites=true&w=majority"
 TESTING_DATABASE_JESSE = mongodb+srv://c0dras1:901JPJS5672@cluster0.nyhtc.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
-
-=======
-TESTING_DATABASE_JESSE = "mongodb+srv://c0dras1:901JPJS5672@cluster0.nyhtc.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority"
->>>>>>> dataService-merge
 TOKEN_SECRET = 'kakhfgfaggkshfsteamjkafhpeppermintasjhgeajh'
 
 
