initial commit, fixed merging issues

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
+SG_API_KEY="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"
 TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan, Jesse Suderman"
+URI = "mongodb+srv://peppermint-dev:cRs9UDzcFSdDqp3t@hws-messenger.mcy8y.mongodb.net/peppermint-db?retryWrites=true&w=majority"
+TESTING_DATABASE_JESSE = mongodb+srv://c0dras1:901JPJS5672@cluster0.nyhtc.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
+TOKEN_SECRET = 'kakhfgfaggkshfsteamjkafhpeppermintasjhgeajh'
