--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "ajv": "^6.8.1",
+    "axios": "^0.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.3"
-    
   },
   "scripts": {
     "start": "react-scripts start",
