--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",   
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
-    "react": "^16.8.6",  
+    "material-ui-dropzone": "^3.3.1",
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "react-s3": "^1.3.1",
     "react-scripts": "^3.4.3"
-    
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
