--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ TEAM_MEMBERS="Aecio, Bonnie, Shums Kassam, Andrey, Olzhas Kalikhan, Jesse Suderm
 URI = "mongodb+srv://peppermint-dev:cRs9UDzcFSdDqp3t@hws-messenger.mcy8y.mongodb.net/peppermint-db?retryWrites=true&w=majority"
 TESTING_DATABASE_JESSE = mongodb+srv://c0dras1:901JPJS5672@cluster0.nyhtc.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
 TOKEN_SECRET = 'kakhfgfaggkshfsteamjkafhpeppermintasjhgeajh'
+DB_ENV = "testing"
