--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "material-ui-dropzone": "^3.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
