--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,9 @@
     "ajv": "^6.8.1",
     "axios": "^0.19.2",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
   },
   "scripts": {
