--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",   
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
-    "react": "^16.8.6",  
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.4.3"
-    
+    "react-scripts": "^3.4.3",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -21,7 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3000",
   "browserslist": {
     "production": [
       ">0.2%",
