--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "material-ui-dropzone": "^3.3.1",
