--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^2.2.0",
     "material-ui-dropzone": "^3.3.1",
     "react": "^16.13.1",
+    "react-combine-reducers": "^1.0.4",
     "react-cookie": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
