refactor context api and combined contacts and invitations in one state

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "ajv": "^6.8.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "jwt-decode": "^2.2.0",
     "material-ui-dropzone": "^3.3.1",
