--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
+    "iso-639-1": "^2.1.4",
     "jwt-decode": "^2.2.0",
     "material-ui-dropzone": "^3.3.1",
     "react": "^16.13.1",
