--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^5.0.1",
     "react-s3": "^1.3.1",
     "react-scripts": "^3.4.3",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
