--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "iso-639-1": "^2.1.4",
     "jwt-decode": "^2.2.0",
     "material-ui-dropzone": "^3.3.1",
+    "parse-url": "^5.0.2",
     "react": "^16.13.1",
     "react-combine-reducers": "^1.0.4",
     "react-cookie": "^4.0.3",
