--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "ajv": "^6.8.1",
     "axios": "^0.19.2",
+    "capitalize": "^2.0.3",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
@@ -21,6 +22,7 @@
     "react-combine-reducers": "^1.0.4",
     "react-cookie": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.3",
