--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "emoji-mart": "^3.0.0",
+    "emoji-picker-react": "^3.2.1",
     "firebase": "^7.19.0",
     "iso-639-1": "^2.1.4",
     "jwt-decode": "^2.2.0",
