add image resize

--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,15 @@
     "capitalize": "^2.0.3",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
     "emoji-mart": "^3.0.0",
-    "emoji-picker-react": "^3.2.1",
     "firebase": "^7.19.0",
     "iso-639-1": "^2.1.4",
     "jwt-decode": "^2.2.0",
     "material-ui-dropzone": "^3.3.1",
     "parse-url": "^5.0.2",
     "react": "^16.13.1",
-    "react-combine-reducers": "^1.0.4",
     "react-cookie": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-debounce-input": "^3.2.2",
