--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "cypress:open": "cypress open",
+    "cypress:open": "cypress open -P .",
     "cy:run": "cypress run --spec 'cypress/integration/peppermintChat.spec.js'",
     "eject": "react-scripts eject"
   },
