add procfile to client side

--- a/client/package.json
+++ b/client/package.json
@@ -53,7 +53,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://peppermint-chat-backend.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
