--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     machine:
       enabled: true
 
-    working_directory: ~/
+    working_directory: ~/*
 
     steps:
       - add_ssh_keys:
