--- a/client/.env
+++ b/client/.env
@@ -10,3 +10,5 @@ REACT_APP_STORAGE_BUCKET="peppermint-chat-fc363.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="380420245995"
 REACT_APP_APP_ID="1:380420245995:web:38531ffab8cd4452c771ae"
 REACT_APP_MEASUREMENT_ID="G-T2H6ESERSX"
+
+REACT_APP_BACKEND_URL="https://peppermint-chat-server.herokuapp.com/"
