--- a/client/.env
+++ b/client/.env
@@ -11,4 +11,4 @@ REACT_APP_MESSAGING_SENDER_ID="380420245995"
 REACT_APP_APP_ID="1:380420245995:web:38531ffab8cd4452c771ae"
 REACT_APP_MEASUREMENT_ID="G-T2H6ESERSX"
 
-REACT_APP_BACKEND_URL="https://peppermint-chat-server.herokuapp.com/"
+REACT_APP_BACKEND_URL="https://peppermint-chat-server.herokuapp.com"
