--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@ command = "CI=false npm run build"
 
 [build.environment]
 REACT_APP_TRANSLATE_URL="https://translation.googleapis.com/language/translate"
-REACT_APP_API_KEY=""AIzaSyDmRsbKL5PDqf1L4raB0xBP6U5o4RXwRCk"
+REACT_APP_API_KEY="AIzaSyDmRsbKL5PDqf1L4raB0xBP6U5o4RXwRCk"
 REACT_APP_FB_KEY="AIzaSyDhQ5ZB6cnKP0uIKA2SXWCbIWJGTjl_wEs"
 REACT_APP_AUTH_DOMAIN="peppermint-chat-fc363.firebaseapp.com"
 REACT_APP_DATABASE_URL="https://peppermint-chat-fc363.firebaseio.com"
