--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,54 @@
---- 
-  jobs: 
-    build: 
-      docker: 
-        - 
-          image: "circleci/node:10.16"
-      steps: 
-        - 
-          checkout: 
-            path: ~/team-peppermint
-        - 
-          restore_cache: 
-            keys: 
-              - "v1-dependencies-{{ checksum \"package.json\" }}"
-              - v1-dependencies-
-        - 
-          run: "npm install"
-        - 
-          save_cache: 
-            key: "v1-dependencies-{{ checksum \"package.json\" }}"
-            paths: 
-              - node_modules
-        - 
-          run: "npm test"
-      working_directory: ~/team-peppermint/client
-    deploy: 
-      machine: 
-        enabled: true
-      steps: 
-        - 
-          add_ssh_keys: 
-            fingerprints: 
-              - "4c:48:eb:76:fb:5c:7a:99:15:14:c1:06:71:d2:2c:70"
-        - 
-          checkout: ~
-        - 
-          run: 
-            command: "git push https://github.com/hatchways/team-peppermint.git dev:production"
-            name: "Push Dev to Production"
-      working_directory: ~/team-peppermint
-  orbs: 
-    cypress: cypress-io/cypress@1
-  version: 2.1
-  
+version: 2.1
+orbs:
+  cypress: cypress-io/cypress@1
+jobs:
+  build:
+    docker:
+      - image: circleci/node:10.16
+
+    working_directory: ~/client
+
+    steps:
+      - checkout:
+          path: ~/.
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
+      - run: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm test
+  deploy:
+    machine:
+      enabled: true
+
+    working_directory: ~/.
+
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "4c:48:eb:76:fb:5c:7a:99:15:14:c1:06:71:d2:2c:70"
+      - checkout:
+      - run:
+          name: Push Dev to Production
+          command: "git push https://github.com/hatchways/team-peppermint.git dev:production"
+
+workflows:
+  test_and_deploy:
+    jobs:
+      - cypress/run:
+          start: npm start
+          wait-on: 'https://peppermint-chat-server.herokuapp.com/'
+          working_directory: client
+          filters:
+            branches:
+              only: dev
+      - deploy:
+          filters:
+            branches:
+              ignore: production              
+          requires:
+            - cypress/run           
