--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,7 @@ base = "client"
 publish = "build/"
 
 # Default build command.
-command = "CI=false npm run build"
+command = "CI=false yarn build"
 
 [build.environment]
 REACT_APP_BACKEND_URL="https://peppermint-chat-server.herokuapp.com"
