--- a/client/package.json
+++ b/client/package.json
@@ -53,7 +53,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "https://peppermint-chat-server.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -83,5 +82,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2"
-  }
+  },
+  "proxy": "https://peppermint-chat-server.herokuapp.com/"
 }
