--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,16 @@
-version: 2
+version: 2.1
+orbs:
+  cypress: cypress-io/cypress@1
 jobs:
   build:
     docker:
       - image: circleci/node:10.16
 
-    working_directory: ~/client
+    working_directory: ~/team-peppermint
 
     steps:
-      - checkout
+      - checkout:
+      - run: cd client
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
@@ -18,9 +21,35 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+  deploy:
+    machine:
+      enabled: true
+
+    working_directory: ~/team-peppermint
+
+    steps:
+      - run: cd client
+      - add_ssh_keys:
+          fingerprints:
+            - "4c:48:eb:76:fb:5c:7a:99:15:14:c1:06:71:d2:2c:70"
+      - checkout:
+      - run:
+          name: Push Dev to Production
+          command: "git push https://github.com/hatchways/team-peppermint.git dev:production"
 
 workflows:
-  version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - cypress/run:
+          start: npm start
+          wait-on: 'https://peppermint-chat-server.herokuapp.com/'
+          working_directory: client
+          filters:
+            branches:
+              only: dev
+      - deploy:
+          filters:
+            branches:
+              ignore: production              
+          requires:
+            - cypress/run           
