--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,10 @@ jobs:
     docker:
       - image: circleci/node:10.16
 
-    working_directory: ~/team-peppermint
+    working_directory: ~/team-peppermint/client
 
     steps:
-      - checkout:
-      - run: cd client
+      - checkout
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
@@ -25,14 +24,13 @@ jobs:
     machine:
       enabled: true
 
-    working_directory: ~/team-peppermint
+    working_directory: ~/team-peppermint/client
 
     steps:
-      - run: cd client
+      - checkout
       - add_ssh_keys:
           fingerprints:
             - "4c:48:eb:76:fb:5c:7a:99:15:14:c1:06:71:d2:2c:70"
-      - checkout:
       - run:
           name: Push Dev to Production
           command: "git push https://github.com/hatchways/team-peppermint.git dev:production"
@@ -43,7 +41,7 @@ workflows:
       - cypress/run:
           start: npm start
           wait-on: 'https://peppermint-chat-server.herokuapp.com/'
-          working_directory: client
+          working_directory: ~/team-peppermint/client
           filters:
             branches:
               only: dev
