amend config.yml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "4c:48:eb:76:fb:5c:7a:99:15:14:c1:06:71:d2:2c:70"
-      - checkout:
+      - checkout
       - run:
           name: Push Dev to Production
           command: "git push https://github.com/hatchways/team-peppermint.git dev:production"
