amend config.yml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,13 @@ jobs:
           path: ~/team-peppermint
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "/client/package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
       - run: npm install
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "/client/package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
   deploy:
     machine:
