--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,13 @@ jobs:
           path: ~/*
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-{{ checksum "/client/package.json" }}
             - v1-dependencies-
       - run: npm install
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "/client/package.json" }}
       - run: npm test
   deploy:
     machine:
@@ -34,7 +34,8 @@ jobs:
       - checkout
       - run:
           name: Push Dev to Production
-          command: git push https://github.com/hatchways/team-peppermint.git dev:production
+          command: |
+            git push https://github.com/hatchways/team-peppermint.git dev:production
 
 workflows:
   test_and_deploy:
